fixed title overflow 3rd

--- a/src/cryptoview-structure/FirstSec.css
+++ b/src/cryptoview-structure/FirstSec.css
@@ -8,6 +8,6 @@
   }
   #top-title{
     text-align: center;
-    font-size: 4rem;
+    font-size: 4.3rem;
   }
 }
